Fixed thread preview wrapping

--- a/client/components/messaging/thread-preview/thread-preview.scss
+++ b/client/components/messaging/thread-preview/thread-preview.scss
@@ -2,7 +2,7 @@
     background: #F6F6F6;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     align-items: center;
     padding: 8px 12px 8px;
     margin-top: 10px;
